# mcp-web-navigator

./: README.md  main.py  pyproject.toml
src/: helper.py  mcp_server.py  my_client.py
src/mcp_server/: mcp_server.py
